# weberknecht

./: CMakeLists.txt  README  TODO  index.html
src/: CMakeLists.txt  main.cpp  quotes.cpp  quotes.h  spirit.h  userdb.cpp  userdb.h  weberknecht.cpp  weberknecht.h  words.cpp  words.h
src/irc/: CMakeLists.txt  client.cpp  client.h  message.cpp  message.h
src/sqlite/: AUTHORS  CMakeLists.txt  Database.h  Query.h  README  SysLog.cpp  helper.cpp  helper.h
